--- a/pom.xml
+++ b/pom.xml
@@ -70,11 +70,12 @@
 		<github.projectOwner>frontlinesms</github.projectOwner>
 		<github.projectName>${project.artifactId}</github.projectName>
 
-		<thinlet.version>1.00.04</thinlet.version>
+		<thinlet.version>1.00.05-SNAPSHOT</thinlet.version>
 		<smslib.version>1.0.3</smslib.version>
 		<f.email.version>0.00.05</f.email.version>
 		<f.mms.version>0.00.09</f.mms.version>
 		<log4j.version>1.2.15</log4j.version>
+		<spring.version>2.5.6</spring.version>
 	</properties>
 
 	<build>	
@@ -174,6 +175,77 @@
 						-->
 				<version>${project.parent.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>net.frontlinesms.core</groupId>
+				<artifactId>thinlet</artifactId>
+				<version>${thinlet.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.frontlinesms.core</groupId>
+				<artifactId>smslib</artifactId>
+				<version>${smslib.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.frontlinesms.core</groupId>
+				<artifactId>frontlinesms-email</artifactId>
+				<version>${f.email.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>net.frontlinesms.core.mms</groupId>
+	  			<artifactId>mmsgateway</artifactId>
+	  			<version>${f.mms.version}</version>
+	  		</dependency>
+			<dependency>
+				<groupId>javax.activation</groupId>
+				<artifactId>activation</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.rxtx</groupId>
+				<artifactId>rxtx</artifactId>
+				<version>2.1.7</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.comm</groupId>
+				<artifactId>comm</artifactId>
+				<version>2.0.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jdom</groupId>
+				<artifactId>jdom</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<!-- Requires fix found at http://www.slingingsemicolons.com/blogs/dave/maven-and-log4j -->
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.slf4j</groupId>
+			    <artifactId>slf4j-log4j12</artifactId>
+			    <version>1.5.2</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-orm</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>${spring.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
@@ -188,7 +260,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>2.5.6</version>
+			<version>${spring.version}</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
